fix(checkbox): ensure that checkbox outline shows in high-contrast

--- a/packages/calcite-components/src/components/checkbox/checkbox.scss
+++ b/packages/calcite-components/src/components/checkbox/checkbox.scss
@@ -77,7 +77,7 @@
 }
 
 .toggle {
-  @apply focus-base relative;
+  @apply focus-base outline-none relative;
 
   &:active,
   &:focus,
